--- a/resources/send.html
+++ b/resources/send.html
@@ -16,7 +16,7 @@
       <br />
       <label>Tags: </label>
       <br />
-      <textarea cols="120" rows="5" name="message" type="text" value=""></textarea>
+      <textarea cols="120" rows="5" name="tags" type="text" value=""></textarea>
       <p><input type="submit" value="Send" /></p>
   </form>
 </div>
